--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -15,19 +15,10 @@
 }
 
 /* Modal container styling */
-.modal {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 90%;
-  width: 400px;
-  max-height: 80%;
-  overflow-y: auto; /* Enable vertical scrollbar */
-}
+
 
 /* Modal heading */
-.modal h3 {
+h3 {
   margin-bottom: 20px;
   text-align: center;
   font-size: 24px;
